@@ -12,9 +12,8 @@
  */
 package com.netflix.conductor.core.execution.mapper;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.Optional;
 
 import org.slf4j.Logger;
@@ -26,7 +25,7 @@ import com.netflix.conductor.common.metadata.tasks.TaskDef;
 import com.netflix.conductor.common.metadata.tasks.TaskType;
 import com.netflix.conductor.common.metadata.workflow.WorkflowDef;
 import com.netflix.conductor.common.metadata.workflow.WorkflowTask;
-import com.netflix.conductor.common.utils.TaskUtils;
+import com.netflix.conductor.core.utils.ParametersUtils;
 import com.netflix.conductor.dao.MetadataDAO;
 import com.netflix.conductor.model.TaskModel;
 import com.netflix.conductor.model.WorkflowModel;
@@ -41,10 +40,12 @@ public class DoWhileTaskMapper implements TaskMapper {
     private static final Logger LOGGER = LoggerFactory.getLogger(DoWhileTaskMapper.class);
 
     private final MetadataDAO metadataDAO;
+    private final ParametersUtils parametersUtils;
 
     @Autowired
-    public DoWhileTaskMapper(MetadataDAO metadataDAO) {
+    public DoWhileTaskMapper(MetadataDAO metadataDAO, ParametersUtils parametersUtils) {
         this.metadataDAO = metadataDAO;
+        this.parametersUtils = parametersUtils;
     }
 
     @Override
@@ -63,60 +64,41 @@ public class DoWhileTaskMapper implements TaskMapper {
      */
     @Override
     public List<TaskModel> getMappedTasks(TaskMapperContext taskMapperContext) {
-
         LOGGER.debug("TaskMapperContext {} in DoWhileTaskMapper", taskMapperContext);
 
-        WorkflowTask taskToSchedule = taskMapperContext.getTaskToSchedule();
-        WorkflowModel workflowInstance = taskMapperContext.getWorkflowInstance();
+        WorkflowTask workflowTask = taskMapperContext.getWorkflowTask();
+        WorkflowModel workflowModel = taskMapperContext.getWorkflowModel();
 
-        TaskModel task = workflowInstance.getTaskByRefName(taskToSchedule.getTaskReferenceName());
+        TaskModel task = workflowModel.getTaskByRefName(workflowTask.getTaskReferenceName());
         if (task != null && task.getStatus().isTerminal()) {
             // Since loopTask is already completed no need to schedule task again.
-            return Collections.emptyList();
+            return List.of();
         }
 
-        String taskId = taskMapperContext.getTaskId();
-        List<TaskModel> tasksToBeScheduled = new ArrayList<>();
-        int retryCount = taskMapperContext.getRetryCount();
         TaskDef taskDefinition =
                 Optional.ofNullable(taskMapperContext.getTaskDefinition())
                         .orElseGet(
                                 () ->
                                         Optional.ofNullable(
                                                         metadataDAO.getTaskDef(
-                                                                taskToSchedule.getName()))
+                                                                workflowTask.getName()))
                                                 .orElseGet(TaskDef::new));
 
-        TaskModel loopTask = new TaskModel();
-        loopTask.setTaskType(TaskType.TASK_TYPE_DO_WHILE);
-        loopTask.setTaskDefName(taskToSchedule.getName());
-        loopTask.setReferenceTaskName(taskToSchedule.getTaskReferenceName());
-        loopTask.setWorkflowInstanceId(workflowInstance.getWorkflowId());
-        loopTask.setCorrelationId(workflowInstance.getCorrelationId());
-        loopTask.setWorkflowType(workflowInstance.getWorkflowName());
-        loopTask.setScheduledTime(System.currentTimeMillis());
-        loopTask.setTaskId(taskId);
-        loopTask.setIteration(1);
-        loopTask.setStatus(TaskModel.Status.IN_PROGRESS);
-        loopTask.setWorkflowTask(taskToSchedule);
-        loopTask.setRateLimitPerFrequency(taskDefinition.getRateLimitPerFrequency());
-        loopTask.setRateLimitFrequencyInSeconds(taskDefinition.getRateLimitFrequencyInSeconds());
+        TaskModel doWhileTask = taskMapperContext.createTaskModel();
+        doWhileTask.setTaskType(TaskType.TASK_TYPE_DO_WHILE);
+        doWhileTask.setStatus(TaskModel.Status.IN_PROGRESS);
+        doWhileTask.setStartTime(System.currentTimeMillis());
+        doWhileTask.setRateLimitPerFrequency(taskDefinition.getRateLimitPerFrequency());
+        doWhileTask.setRateLimitFrequencyInSeconds(taskDefinition.getRateLimitFrequencyInSeconds());
+        doWhileTask.setRetryCount(taskMapperContext.getRetryCount());
 
-        tasksToBeScheduled.add(loopTask);
-        List<WorkflowTask> loopOverTasks = taskToSchedule.getLoopOver();
-        List<TaskModel> tasks2 =
-                taskMapperContext
-                        .getDeciderService()
-                        .getTasksToBeScheduled(workflowInstance, loopOverTasks.get(0), retryCount);
-        tasks2.forEach(
-                t -> {
-                    t.setReferenceTaskName(
-                            TaskUtils.appendIteration(
-                                    t.getReferenceTaskName(), loopTask.getIteration()));
-                    t.setIteration(loopTask.getIteration());
-                });
-        tasksToBeScheduled.addAll(tasks2);
-
-        return tasksToBeScheduled;
+        Map<String, Object> taskInput =
+                parametersUtils.getTaskInputV2(
+                        workflowTask.getInputParameters(),
+                        workflowModel,
+                        doWhileTask.getTaskId(),
+                        taskDefinition);
+        doWhileTask.setInputData(taskInput);
+        return List.of(doWhileTask);
     }
 }
